--- a/sub-jquery/index.html
+++ b/sub-jquery/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jquery</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Purehtml Example</title>
+  <script src="//cdn.bootcss.com/jquery/3.4.1/jquery.min.js">
+  </script>
+</head>
+<body>
+  <div style="display: flex; justify-content: center; align-items: center; height: 200px;">
     这是一个jquery项目
-  </body>
+  </div>
+  <div id="purehtml-container" style="text-align:center"></div>
+  <script src="//localhost:10055/entry.js" entry></script>
+</body>
 </html>
